--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "flowbite": "^1.6.3",
     "flowbite-react": "^0.3.7",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
