--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "date-fns": "^2.29.3",
     "flowbite": "^1.6.3",
     "flowbite-react": "^0.3.7",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-datepicker": "^4.8.0",
