--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "date-fns": "^2.29.3",
     "flowbite": "^1.6.3",
     "flowbite-react": "^0.3.7",
+    "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
@@ -22,6 +23,7 @@
     "react-router-dom": "^6.6.1"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.2",
     "@types/react": "^18.0.24",
     "@types/react-datepicker": "^4.8.0",
     "@types/react-dom": "^18.0.8",
